# devrunner

./: .eslintrc.cjs  .eslintrc.js  .gitignore  README.md  go.mod  go.sum  info.plist  main.go  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  project.json
frontend/: package-lock.json  package.json  package.json.md5
frontend/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
frontend/src/modules/project/: project-chooser.tsx
frontend/src/modules/services/: logs.tsx  page.tsx  state.tsx
frontend/src/store/: config-store.ts  index.tsx  logs-store.ts  project-store.ts  root-store.ts  runner-store.ts
pkg/config/: config.go
pkg/env/: main.go
pkg/errors/: print.go
pkg/logs/: main.go
pkg/project/: main.go
pkg/runner/: main.go  service-runner-command.go  service-runner-watch.go  service-runner.go
pkg/storage/: main.go
pkg/utility/: array.go  number.go  random.go
src/: App.tsx  index.css  layout.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/command/: Cargo.toml
src-tauri/src/command/src/: lib.rs
src-tauri/src/config/: Cargo.toml
src-tauri/src/config/src/: lib.rs
src/config/: provider.tsx
src/logs/: provider.tsx
src/models/: application.ts
src/routes/: logs.tsx
