[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = "1.0.142"
signal-hook = "0.3.14"
tauri = "1.0.5"
nanoid = "0.4.0"
notify = "5.0.0-pre.11"
crossbeam-channel = "0.5.6"
config = { path = "../config" }

